--- a/game/styles/main.css
+++ b/game/styles/main.css
@@ -675,3 +675,19 @@ button:hover {
   background: #2a2a2a;
   border-radius: var(--radius);
 }
+
+
+
+
+
+
+
+
+/* Prevent text selection on long press for job cards */
+#job-list > div {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none; /* Prevent callout menu on iOS */
+}
